@@ -95,7 +95,7 @@ gboolean display_start (Display *display);
 
 // FIXME: Make greeter its own object?
 
-gboolean display_connect (Display *display, const gchar **theme, const gchar **language, const gchar **layout, const gchar **session, const gchar **username, gint *delay, GError *error);
+gboolean display_connect (Display *display, const gchar **theme, const gchar **layout, const gchar **session, const gchar **username, gint *delay, GError *error);
 
 gboolean display_start_authentication (Display *display, const gchar *username, DBusGMethodInvocation *context);
 
